--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.webmanifest" />
+
     <meta name="theme-color" content="#111827" />
+    <meta name="color-scheme" content="dark" />
+
+    <!-- iOS PWA / Home Screen -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="AbstractObserver" />
+    <link rel="apple-touch-icon" href="/icon.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <title>AbstractObserver</title>
   </head>
   <body>
@@ -12,4 +25,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
